axum-macros/tests/from_request/fail/state_infer_multiple_different_types.stderr
error: can't infer state type, please add `#[from_request(state = MyStateType)]` attribute
 --> tests/from_request/fail/state_infer_multiple_different_types.rs:4:10
  |
4 | #[derive(FromRequest)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FromRequest` (in Nightly builds, run with -Z macro-backtrace for more info)
